--- a/src/main/resources/templates/view/cadastro.html
+++ b/src/main/resources/templates/view/cadastro.html
@@ -25,8 +25,7 @@
             </div>
             <div class="form-group mt-4 mb-4">
                 <label for="telefone">Telefone: Ex.:(99)99999-9999</label>
-                <input type="tel" class="form-control" th:errorclass="is-invalid" th:field="*{telefone}"
-                    pattern="\(\d{2}\)\d{5}-\d{4}">
+                <input type="tel" class="form-control" th:errorclass="is-invalid" th:field="*{telefone}">
                 <div class="invalid-feedback" th:if="${#fields.hasErrors('telefone')}" th:errors="*{telefone}"></div>
             </div>
             <div class="form-group mt-4 mb-4">
